error.txt
node : C:\Users\Yan\Doc
uments\9 DF\Projeto-9df
\admin.js:1433
No linha:1 caractere:1
+ node -c admin.js 2> 
error.log ; type 
error.log
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\Yan\   
 Do...f\admin.js:14    
33:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
function 
isSafeImagePath(s) { 
return /^[a-z0-9/_-.]+$
/.test(normPath(s)) && 
GALLERY_EXTENSIONS.incl
udes(normPath(s).split(
".").pop()?.toLowerCase
()); }
                       
              
^^^^^^^^^^^^^^^^^

SyntaxError: Invalid 
regular expression: 
/^[a-z0-9/_-.]+$/: 
Range out of order in 
character class
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1662:18)
    at checkSyntax (nod
e:internal/main/check_s
yntax:78:3)

Node.js v22.17.0
